# whatsmo

./: .gitignore  AGENTS.md  LICENSE  README.md  bunfig.toml  package.json  svelte.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: android-apk.yml
scripts/: android-env.sh  build-release-test-apk.sh  install-apk.sh  setup-android-sdk.sh
src/: app.html  hooks.client.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: contacts.rs  lib.rs  main.rs  whatsapp.rs
src/lib/api/: types.ts  whatsmo.ts
src/lib/components/: AuthPanel.svelte  ChatComposer.svelte  ChatList.svelte  ChatWindow.svelte  DevicesPanel.svelte  Icon.svelte  MessageBubble.svelte  MessageContextMenu.svelte  ProfilePanel.svelte  SettingsPanel.svelte  StatusPanel.svelte  StatusViewer.svelte
src/lib/stores/: app.test.ts  app.ts
src/lib/utils/: media.ts
src/routes/: +page.svelte
