[package]
name = "whatsmo"
version = "0.1.0"
description = "Android-first WhatsApp companion client powered by whatsapp-rust"
authors = ["Whatsmo contributors"]
license = "MIT"
repository = ""
edition = "2024"
rust-version = "1.85"

[lib]
name = "whatsmo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10.2", features = [] }
tauri-plugin-notification = "2.3.1"
thiserror = "2"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "sync", "fs"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
whatsapp-rust = { version = "0.5", default-features = false, features = [
  "sqlite-storage",
  "tokio-transport",
  "tokio-runtime",
  "ureq-client",
  "tokio-native",
  "moka-cache"
] }
whatsapp-rust-sqlite-storage = "0.5"
whatsapp-rust-tokio-transport = "0.5"
whatsapp-rust-ureq-http-client = "0.5"
wacore = { version = "0.5", default-features = false }
wacore-binary = { version = "0.5", default-features = false }
waproto = "0.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
